--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Test Db</title>
 </head>
 <body>
-  <form action="/subscribers" method="POST">
+  <form action="/subscribe" method="POST">
     <label for="name">Name:</label>
     <input type="text" name="name"><br><br>
     <label for="hairColor">Hair color:</label>
